Ensure widgets are always visible in IE7. Closes #579.

--- a/client/static/css/panda.css
+++ b/client/static/css/panda.css
@@ -130,6 +130,7 @@ h3 { font-weight: normal; padding-bottom: 4px; }
 #dataset-search-filters table td { vertical-align:baseline; border:0; }
 #dataset-search-filters table td.thin { width:10%; }
 #dataset-search-filters table td.range { font-size: 0.9em; color: #999; vertical-align:bottom; padding-bottom:0px; }
+#dataset-search-filters table td.widget-cell { width:35%; }
 #dataset-search-filters table input { margin-bottom: 0; }
 #dataset-search-filters table select { margin-bottom: 0; }
 #dataset-search .filter { display: none; }
